# canton-rust-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/canton/: Cargo.toml
crates/canton-admin/: Cargo.toml
crates/canton-admin/src/: client.rs  lib.rs  topology.rs
crates/canton-admin/tests/: inprocess.rs  live.rs
crates/canton-auth/: Cargo.toml
crates/canton-auth/src/: lib.rs
crates/canton-core/: Cargo.toml
crates/canton-core/src/: auth.rs  config.rs  error.rs  lib.rs  retry.rs  telemetry.rs
crates/canton-ledger/: Cargo.toml
crates/canton-ledger/examples/: submit_and_read.rs  version_and_health.rs
crates/canton-ledger/src/: client.rs  command.rs  json.rs  lib.rs  ws.rs
crates/canton-ledger/tests/: inprocess.rs  live.rs  stream_capture_probe.rs  tls.rs  ws.rs
crates/canton-proto/: Cargo.toml  build.rs
crates/canton-proto/examples/: smoke_version.rs
crates/canton-proto/proto/grpc/health/v1/: health.proto
crates/canton-proto/src/: lib.rs
crates/canton/src/: lib.rs
docs/adr/: 0001-vendored-protos-pinned-to-a-canton-release.md  0002-proto-types-are-protocol-stable.md  0003-connection-kernel-in-canton-core.md  0004-streams-use-precise-capturing.md  0005-lockstep-versioning.md  0006-telemetry-emits-consumer-exports.md  0007-thin-facade-crate.md  README.md
