[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "Apache-2.0"
readme       = "README.md"
authors      = ["NODEJUMPER <dmitryk@nodejumper.io>"]
repository   = "https://github.com/nodejumper-org/canton-rust-sdk"
homepage     = "https://nodejumper.io/"
categories   = ["api-bindings", "asynchronous", "network-programming"]
keywords     = ["canton", "grpc", "ledger", "blockchain", "daml"]

[workspace.dependencies]
# internal crates (path = local build, version = published requirement)
canton-proto  = { path = "crates/canton-proto",  version = "0.1.0" }
canton-core   = { path = "crates/canton-core",   version = "0.1.0" }
canton-auth   = { path = "crates/canton-auth",   version = "0.1.0" }
canton-ledger = { path = "crates/canton-ledger", version = "0.1.0" }
canton-admin  = { path = "crates/canton-admin",  version = "0.1.0" }

# external
tonic        = { version = "0.14", default-features = false }
tonic-prost  = { version = "0.14" }
tonic-types  = { version = "0.14" }
prost        = { version = "0.14" }
prost-types  = { version = "0.14" }
tokio        = { version = "1", default-features = false }
tower        = { version = "0.5" }
thiserror    = { version = "2" }
tracing      = { version = "0.1" }
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1" }
metrics      = { version = "0.24" }
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
tokio-stream = { version = "0.1" }
async-stream = { version = "0.3" }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
# WS-TLS connector construction (same rustls family tokio-tungstenite pins).
rustls              = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types    = { version = "1" }
rustls-native-certs = { version = "0.8" }
reqwest      = { version = "0.12", default-features = false }
uuid         = { version = "1", features = ["v4"] }
# build-deps
tonic-prost-build   = { version = "0.14" }
protoc-bin-vendored = { version = "3" }
walkdir             = { version = "2" }

[workspace.lints.rust]
unsafe_code                   = "forbid"
missing_docs                  = "warn"
missing_debug_implementations = "warn"
unreachable_pub               = "warn"
rust_2018_idioms              = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic                = { level = "warn", priority = -1 }
unwrap_used             = "warn"
expect_used             = "warn"
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
# Purely stylistic: flags proper/product names (LocalNet, Keycloak, OAuth2, …)
# in prose as "missing backticks". Too noisy for docs that name real systems.
doc_markdown            = "allow"
