[package]
name         = "canton-ledger"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
readme       = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
categories   = { workspace = true }
keywords     = { workspace = true }
description  = "Async Canton Ledger API client (gRPC): commands, streaming, de-duplication, recovery."

[dependencies]
canton-proto = { workspace = true }
canton-core  = { workspace = true }
canton-auth  = { workspace = true }
tonic        = { workspace = true, features = ["transport", "codegen", "tls-ring", "tls-native-roots"] }
tonic-prost  = { workspace = true }
prost-types  = { workspace = true }
tokio        = { workspace = true, features = ["rt", "macros", "time"] }
tracing      = { workspace = true }
futures-core = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
uuid         = { workspace = true }
reqwest      = { workspace = true, features = ["json", "rustls-tls"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
# `ws` feature: JSON transport streaming over WebSocket (+ TLS connector).
tokio-tungstenite   = { workspace = true, optional = true }
futures-util        = { workspace = true, optional = true }
rustls              = { workspace = true, optional = true }
rustls-pki-types    = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }

[features]
# WebSocket streaming for the JSON transport (unbounded live tails).
ws = [
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:rustls",
    "dep:rustls-pki-types",
    "dep:rustls-native-certs",
]
# OpenTelemetry: OTLP span export + W3C trace-context propagation on outgoing
# requests (forwards to canton-core's `otel`).
otel = ["canton-core/otel"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
# Server stubs (dev-only) so in-process gRPC test servers can be built.
canton-proto = { workspace = true, features = ["server"] }
tokio-stream = { workspace = true, features = ["net"] }
rcgen = "0.13"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
