[package]
name         = "canton"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
readme       = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
categories   = { workspace = true }
keywords     = { workspace = true }
description  = "The Canton Network Rust SDK: one-stop entry point re-exporting the canton-* crate family."

[dependencies]
canton-core   = { workspace = true }
canton-auth   = { workspace = true }
canton-ledger = { workspace = true }
canton-admin  = { workspace = true }

[features]
# Forwarded to the crates that implement them, so `canton = { features = [..] }`
# is the only place users have to think about.
ws   = ["canton-ledger/ws"]
otel = ["canton-ledger/otel"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
